deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-nodeapp
  labels:
    app: nodeapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: todo-nodeapp
        image: meghaabhardwajj/argocd-nodeapp:10
        ports:
        - containerPort: 8000
