service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-service
spec:
  type: NodePort
  selector:
    app: nodeapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 31000
