ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ilb-demo-ingress
  namespace: default
  annotations:
    ingressClassName: "gce-internal"
spec:
  ingressClassName: gce-internal
  defaultBackend:
    service:
      name: todo-service
      port:
        number: 80
